--- a/BrainBurst/android/app/build.gradle
+++ b/BrainBurst/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         // minSdkVersion flutter.minSdkVersion
-        minSdkVersion 21 
+        minSdkVersion 26 
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -66,3 +66,7 @@ flutter {
 }
 
 dependencies {}
+    // aaptOptions {
+    //     noCompress 'tflite'
+    //     noCompress 'lite'
+    // }
